RMP-699 - UI alignment fix

--- a/components/src/core/components/Comments/comment.scss
+++ b/components/src/core/components/Comments/comment.scss
@@ -33,7 +33,7 @@
           .show-on-hover {
             &-grid {
               .oxd-comment-content-header-action {
-                display: block;
+                display: flex;
               }
             }
           }
